--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=arundhati.amexs@gmail.com
-MAIL_PASSWORD=password@2018
+MAIL_USERNAME=your-account-username
+MAIL_PASSWORD=your-account-password
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="ITLH Software"
 MAIL_FROM_ADDRESS=info@itlh.com
